hphp/test/zend/good/ext/ftp/tests/config.skipif
<?php
if (!extension_loaded("ftp")) echo "skip";
