hphp/test/zend/bad/ext/phar/tests/phar_convert_tar3.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>
<?php if (!extension_loaded("bz2")) die("skip"); ?>